--- a/labs/lab_0/titanic.ipynb
+++ b/labs/lab_0/titanic.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,9 +61,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading tidyverse: ggplot2\n",
+      "Loading tidyverse: tibble\n",
+      "Loading tidyverse: tidyr\n",
+      "Loading tidyverse: readr\n",
+      "Loading tidyverse: purrr\n",
+      "Loading tidyverse: dplyr\n",
+      "Conflicts with tidy packages ---------------------------------------------------\n",
+      "filter(): dplyr, stats\n",
+      "lag():    dplyr, stats\n",
+      "\n",
+      "Attaching package: ‘scales’\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    discard\n",
+      "\n",
+      "The following object is masked from ‘package:readr’:\n",
+      "\n",
+      "    col_factor\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(forcats) # factors munging\n",
@@ -74,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,18 +392,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iteration II\n",
+    "## How much gender affects survival rate?\n",
     "\n",
-    "### How much gender affects survival rate?\n",
-    "\n",
-    "#### Transform\n",
+    "### Transform\n",
     "\n",
     "Change survived to *yes* and *no*:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -396,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -411,12 +436,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize"
+    "### Visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,39 +483,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model\n",
+    "### Model\n",
     "\n",
     "Our second model is simple, still. We predict that all (and only) women survive."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  PassengerId = col_integer(),\n",
-      "  Pclass = col_integer(),\n",
-      "  Name = col_character(),\n",
-      "  Sex = col_character(),\n",
-      "  Age = col_double(),\n",
-      "  SibSp = col_integer(),\n",
-      "  Parch = col_integer(),\n",
-      "  Ticket = col_character(),\n",
-      "  Fare = col_double(),\n",
-      "  Cabin = col_character(),\n",
-      "  Embarked = col_character()\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test <- read_csv(\"data/test.csv\")\n",
     "model <- tibble(PassengerID = test$PassengerId, Survived = ifelse(test$Sex == 'female', 1, 0))\n",
     "write_csv(model, \"models/females_survive.csv\")"
    ]
@@ -499,16 +502,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What social status does passangers have?\n",
+    "## What social status does passangers have?\n",
     "\n",
-    "#### Transform\n",
+    "### Transform\n",
     "\n",
     "Let's try to extract person titles and try to group them based on that"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,12 +523,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization"
+    "### Visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -636,14 +639,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Are mothers more likely to survive?\n",
+    "## Are mothers more likely to survive?\n",
     "\n",
-    "#### Transform"
+    "### Transform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -669,12 +672,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize"
+    "### Visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -707,14 +710,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Does social status influence the chance of survival?\n",
+    "## Does social status influence the chance of survival?\n",
     "\n",
-    "#### Transform"
+    "### Transform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,12 +734,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize"
+    "### Visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -769,16 +772,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Does being part of a family help?\n",
+    "## Does being part of a family help?\n",
     "\n",
     "Let define 3 types of families - Large (more than 4 members), Medium (more than 1 but less than 5 members)  and Single (1 member).\n",
     "\n",
-    "#### Transform"
+    "### Transform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -803,12 +806,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exploration"
+    "### Exploration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -841,14 +844,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How likely are high class passangers to survive?\n",
+    "## How likely are high class passangers to survive?\n",
     "\n",
-    "#### Visualize"
+    "### Visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -918,22 +921,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Are younger passangers more likely to survive?\n",
+    "## Are younger passangers more likely to survive?\n",
     "\n",
-    "#### Transform\n",
+    "### Transform\n",
     "\n",
     "Let break the age into three groups: Child (under 18), Adult and OAP (over 60):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "titanic <- mutate(titanic, LifeStage = factor(ifelse(Age < 18, \"Child\", ifelse(Age <= 60, \"Adult\", \"OAP\"))))"
+    "titanic <- titanic %>% \n",
+    "        mutate(LifeStage = factor(ifelse(Age < 18, \"Child\", ifelse(Age <= 60, \"Adult\", \"OAP\"))))"
    ]
   },
   {
@@ -945,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +969,7 @@
     }
    ],
    "source": [
-    "ggplot(titanic[1:891,], aes(x = LifeStage, fill = Survived)) +\n",
+    "ggplot(titanic, aes(x = LifeStage, fill = Survived)) +\n",
     "      geom_bar(position = \"fill\") +\n",
     "      ylab(\"Survival Rate\") +\n",
     "      geom_hline(yintercept = (sum(train$Survived)/nrow(train)), col = \"white\", lty = 2) +\n",
@@ -973,13 +977,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model\n",
+    "\n",
+    "Let's build a generalized linear model (GLM) using our data:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic <- titanic %>% \n",
+    "        mutate(Fare = ifelse(Fare == 0, 0.001, Fare)) %>%\n",
+    "        mutate(LogFare = log(Fare))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data <- select(titanic, Survived, Pclass, Sex, LifeStage, LogFare)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_glm <- glm(Survived ~ Pclass + Sex + LifeStage + LogFare, \n",
+    "                 family = binomial, \n",
+    "                 data = train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "glm(formula = Survived ~ Title + Pclass + Sex + LifeStage + LogFare, \n",
+       "    family = binomial, data = train_data)\n",
+       "\n",
+       "Deviance Residuals: \n",
+       "    Min       1Q   Median       3Q      Max  \n",
+       "-2.3513  -0.6596  -0.3740   0.6152   2.3705  \n",
+       "\n",
+       "Coefficients:\n",
+       "                Estimate Std. Error z value Pr(>|z|)    \n",
+       "(Intercept)     16.33153  507.59234   0.032 0.974333    \n",
+       "TitleRoyalty    -0.40699    1.41887  -0.287 0.774231    \n",
+       "TitleMaster      2.68113    0.78515   3.415 0.000638 ***\n",
+       "TitleMiss      -12.33374  507.59201  -0.024 0.980614    \n",
+       "TitleMrs       -12.07544  507.59200  -0.024 0.981020    \n",
+       "TitleMr          0.28044    0.61677   0.455 0.649331    \n",
+       "Pclass          -1.24126    0.15348  -8.088 6.09e-16 ***\n",
+       "SexMale        -15.38213  507.59176  -0.030 0.975825    \n",
+       "LifeStageChild   0.20289    0.35037   0.579 0.562546    \n",
+       "LifeStageOAP    -1.00278    0.60777  -1.650 0.098955 .  \n",
+       "LogFare         -0.06286    0.08541  -0.736 0.461755    \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "(Dispersion parameter for binomial family taken to be 1)\n",
+       "\n",
+       "    Null deviance: 964.52  on 713  degrees of freedom\n",
+       "Residual deviance: 626.02  on 703  degrees of freedom\n",
+       "  (177 observations deleted due to missingness)\n",
+       "AIC: 648.02\n",
+       "\n",
+       "Number of Fisher Scoring iterations: 13\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(train_glm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prediction\n",
+    "\n",
+    "First, we have to apply all our transformations to the test data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic_test <- test %>%\n",
+    "        mutate(Sex = factor(Sex)) %>%\n",
+    "        mutate(Sex = fct_recode(Sex, \"Female\" = \"female\", \"Male\" = \"male\")) %>%\n",
+    "        mutate(LifeStage = factor(ifelse(Age < 18, \"Child\", ifelse(Age <= 60, \"Adult\", \"OAP\")))) %>%\n",
+    "        mutate(Fare = ifelse(Fare == 0, 0.001, Fare)) %>%\n",
+    "        mutate(LogFare = log(Fare))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data <- select(titanic_test, Pclass, Sex, LifeStage, LogFare)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_hats <- predict.glm(train_glm, newdata = test_data, type = \"response\", na.action = na.pass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survived_hat <- ifelse(is.na(p_hats) | p_hats <= 0.5, 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model <- tibble(PassengerID = test$PassengerId, Survived = survived_hat)\n",
+    "write_csv(model, \"models/glm.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can we do better?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(party)\n",
+    "cf_model <- cforest(Survived ~ Pclass + Sex + LifeStage + LogFare,\n",
+    "                 data = train_data, \n",
+    "                 controls = cforest_unbiased(ntree = 1000, mtry = 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     \n",
+       "       No Yes\n",
+       "  No  506  97\n",
+       "  Yes  43 245"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(predict(cf_model), train_data$Survived)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl class=dl-horizontal>\n",
+       "\t<dt>Title</dt>\n",
+       "\t\t<dd>0.148373088685015</dd>\n",
+       "\t<dt>Pclass</dt>\n",
+       "\t\t<dd>0.0799877675840979</dd>\n",
+       "\t<dt>Sex</dt>\n",
+       "\t\t<dd>0.0699449541284404</dd>\n",
+       "\t<dt>LifeStage</dt>\n",
+       "\t\t<dd>0.00523547400611621</dd>\n",
+       "\t<dt>LogFare</dt>\n",
+       "\t\t<dd>0.0266605504587156</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[Title] 0.148373088685015\n",
+       "\\item[Pclass] 0.0799877675840979\n",
+       "\\item[Sex] 0.0699449541284404\n",
+       "\\item[LifeStage] 0.00523547400611621\n",
+       "\\item[LogFare] 0.0266605504587156\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "Title\n",
+       ":   0.148373088685015Pclass\n",
+       ":   0.0799877675840979Sex\n",
+       ":   0.0699449541284404LifeStage\n",
+       ":   0.00523547400611621LogFare\n",
+       ":   0.0266605504587156\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      Title      Pclass         Sex   LifeStage     LogFare \n",
+       "0.148373089 0.079987768 0.069944954 0.005235474 0.026660550 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "varimp(cf_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf_predictions <- predict(cf_model, test_data, OOB=TRUE, type=\"response\")\n",
+    "cf_predictions <- ifelse(cf_predictions == \"No\", 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model <- tibble(PassengerID = test$PassengerId, Survived = cf_predictions)\n",
+    "write_csv(model, \"models/crf.csv\")"
+   ]
   }
  ],
  "metadata": {
