--- a/labs/lab_0/titanic.ipynb
+++ b/labs/lab_0/titanic.ipynb
@@ -96,7 +96,8 @@
     "library(forcats) # factors munging\n",
     "library(stringr) # string manipulation\n",
     "library(ggthemes) # visualization\n",
-    "library(scales) # visualization"
+    "library(scales) # visualization\n",
+    "library(party) # random forest"
    ]
   },
   {
@@ -141,8 +142,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iteration I\n",
-    "\n",
     "### Visualize (skip transform)"
    ]
   },
@@ -698,12 +697,12 @@
    ],
    "source": [
     "ggplot(titanic, aes(x = Mother, fill = Survived)) +\n",
-    "        geom_bar(position = \"fill\") +\n",
-    "        ylab(\"Survival Rate\") +\n",
-    "        geom_hline(yintercept = (sum(train$Survived)/nrow(train)), col = \"white\", lty = 2) +\n",
-    "        ggtitle(\"Survival Rate by Motherhood Status\") +\n",
-    "        theme_hc() +\n",
-    "        scale_colour_hc()"
+    "    geom_bar(position = \"fill\") +\n",
+    "    ylab(\"Survival Rate\") +\n",
+    "    geom_hline(yintercept = (sum(train$Survived)/nrow(train)), col = \"white\", lty = 2) +\n",
+    "    ggtitle(\"Survival Rate by Motherhood Status\") +\n",
+    "    theme_hc() +\n",
+    "    scale_colour_hc()"
    ]
   },
   {
@@ -806,7 +805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploration"
+    "### Visualize"
    ]
   },
   {
@@ -1140,7 +1139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model"
+    "### Model\n",
+    "\n",
+    "Let's try with Conditional Random Forest model:"
    ]
   },
   {
@@ -1149,7 +1150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(party)\n",
     "cf_model <- cforest(Survived ~ Pclass + Sex + LifeStage + LogFare,\n",
     "                 data = train_data, \n",
     "                 controls = cforest_unbiased(ntree = 1000, mtry = 3))"
