Prepare results for Kaggle

--- a/labs/lab_1/mnist.ipynb
+++ b/labs/lab_1/mnist.ipynb
@@ -23,80 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading tidyverse: ggplot2\n",
-      "Loading tidyverse: tibble\n",
-      "Loading tidyverse: tidyr\n",
-      "Loading tidyverse: readr\n",
-      "Loading tidyverse: purrr\n",
-      "Loading tidyverse: dplyr\n",
-      "Conflicts with tidy packages ---------------------------------------------------\n",
-      "filter(): dplyr, stats\n",
-      "lag():    dplyr, stats\n",
-      "\n",
-      "Attaching package: ‘scales’\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    discard\n",
-      "\n",
-      "The following object is masked from ‘package:readr’:\n",
-      "\n",
-      "    col_factor\n",
-      "\n",
-      "Loading required package: lattice\n",
-      "\n",
-      "Attaching package: ‘caret’\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    lift\n",
-      "\n",
-      "Loading required package: colorspace\n",
-      "Loading required package: grid\n",
-      "Loading required package: data.table\n",
-      "\n",
-      "Attaching package: ‘data.table’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    transpose\n",
-      "\n",
-      "VIM is ready to use. \n",
-      " Since version 4.0.0 the GUI is in its own package VIMGUI.\n",
-      "\n",
-      "          Please use the package to use the new (and old) GUI.\n",
-      "\n",
-      "Suggestions and bug-reports can be submitted at: https://github.com/alexkowa/VIM/issues\n",
-      "\n",
-      "Attaching package: ‘VIM’\n",
-      "\n",
-      "The following object is masked from ‘package:datasets’:\n",
-      "\n",
-      "    sleep\n",
-      "\n",
-      "Loading required package: viridisLite\n",
-      "\n",
-      "Attaching package: ‘viridis’\n",
-      "\n",
-      "The following object is masked from ‘package:scales’:\n",
-      "\n",
-      "    viridis_pal\n",
-      "\n",
-      "FastKNN version 0.9.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(purrrlyr)\n",
@@ -738,6 +667,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -844,6 +780,46 @@
     "    scale_color_viridis(discrete=TRUE) +\n",
     "    scale_fill_viridis(option=\"viridis\") +\n",
     "    theme_hc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sending our solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_data <- select(train, -label, -intensity)\n",
+    "train_labels <- train$label\n",
+    "\n",
+    "knn_model <- fastknn(\n",
+    "    as.matrix(train_data), \n",
+    "    train_labels,\n",
+    "    as.matrix(test), \n",
+    "    k=10,\n",
+    "    method = \"dist\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions <- tibble(\n",
+    "    ImageId=1:length(knn_model$class), \n",
+    "    Label=knn_model$class\n",
+    ")\n",
+    "write_csv(predictions, \"results/knn.csv\")"
    ]
   }
  ],
